# BadKB-Script-Generator

./: CMakeLists.txt  README.md  build.bat  resources.rc
src/: main.cpp
